commit to master

--- a/witryny1.html
+++ b/witryny1.html
@@ -10,10 +10,10 @@
             font-size: 17px;
            }
            #a1{
-               color: "yellow";
+               color: yellow;
            }
            #a2{
-               font-size: italic;
+               font-style: italic;
            }
            #a3{
                 font-weight: bold;
@@ -39,7 +39,7 @@
             div>#a4{
                 font-weight: lighter;
             }
-            #a1 + #a2{
+            #a1, #a2{
                 background-color: orange;
             }
             <!-- wszytskie najblizsze--->
@@ -47,7 +47,7 @@
                 background-color: orange;
             }
             
-            #a2 + p {
+            #a2 , p {
                 oppacity: 0,5;
             }
             p:nth-of-type(2){
