--- a/witryny1.html
+++ b/witryny1.html
@@ -1,69 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta cahrset="utf-8"/>
         <style>
-           *{
-               font-family: 'Times New Roman' ,serif;
-           }
-           p{
-            font-size: 17px;
-           }
-           #a1{
-               color: yellow;
-           }
-           #a2{
-               font-style: italic;
-           }
-           #a3{
-                font-weight: bold;
-           }
-           #a4{
-               text-decoration: line-through;
-               background-color: yellow;
-           }
-           .rozmiar{
-               border-width: 1px;
-               border-style: dotted;
-               border-color: grey;
-               border: 1px dotted grey;
-           }
-           div{
-               font-size: 25px;
-               font-weight: 900;
-           }
+            ul li{
+                list-style-type: georgian;
+                list-style-position: position;
+            }
 
-           div p{
-               font-size: smaller;
-           }
-            div>#a4{
-                font-weight: lighter;
+            #a li{
+                list-style-type: decimal;
             }
-            #a1, #a2{
-                background-color: orange;
+            #b li{
+                list-style-type: none;
             }
-            <!-- wszytskie najblizsze--->
-            #a1 ~ p{
-                background-color: orange;
+            #a1{
+                list-style-type: upper-roman;
             }
-            
-            #a2 , p {
-                oppacity: 0,5;
+            #a2{
+                list-style-tye: decimal;
             }
-            p:nth-of-type(2){
-                font-size: 30px;
+            #a3{
+                list-style-type: upper-alpha;
             }
         </style>
     </head>
     <body>
-        <div>
-            "
-            Ala ma kota
-            ""
-            <p class="rozmiar" id="a1">Żółty tekst rozmiar 17px;</p>
-            <p class="rozmiar" id="a2">Pochylony tekst rozmiar 17px;</p>
-            <p class="rozmiar" id="a3">Pogrubiony tekst rozmiar 17px;</p>
-            <p class="rozmiar" id="a4">przekreślony tekst rozmiar 17px na żółtym tle;</p>
-        </div>
+        <ul>
+            <li>1</li>
+            <li>
+            2
+                <ul>
+                    <li>2.1</li>
+                    <li>2.2</li>
+                        <ul id="a">
+                            <li>2.1.1</li>
+                            <li>2.1.2</li>
+                            <li>2.1.3</li>
+                            <li>2.1.4</li>
+                        </ul>
+                </ul>
+            </li>
+            <li>3</li>
+            <li>4</li>
+                <ul id="b">
+                    <li>4.1</li>
+                    <li>2.2</li>
+                </ul>
+            <li>5</li>
+        </ul>
+
+        <ol id="a1">
+            <li>
+                Punkt pierwszy
+                <ol id="b2">
+                    <li>1.2</li>
+                        <ol id="a3">
+                            <li>1.2.2</li>
+                            <li>1.2.2</li>
+                        </ol>
+                    <li>1.3</li>
+                </ol>
+            </li>
+        </ol>
     </body>
 </html>
