commit to master

--- a/pwitryn1.html
+++ b/pwitryn1.html
@@ -42,7 +42,7 @@
             #a1, #a2{
                 background-color: orange;
             }
-            <!-- wszytskie najblizsze--->
+            <!-- wszytskie_najblizsze--->
             #a1 ~ p{
                 background-color: orange;
             }
