--- a/pwitryn1.html
+++ b/pwitryn1.html
@@ -48,7 +48,7 @@
             }
             
             #a2 , p {
-                oppacity: 0,5;
+                opacity: 0,5;
             }
             p:nth-of-type(2){
                 font-size: 30px;
