--- a/witryny1.html
+++ b/witryny1.html
@@ -18,7 +18,7 @@
                 list-style-type: upper-roman;
             }
             #a2{
-                list-style-tye: decimal;
+                list-style-type: decimal;
             }
             #a3{
                 list-style-type: upper-alpha;
