commit to master

--- a/pwitryny5/fraszki.html
+++ b/pwitryny5/fraszki.html
@@ -9,7 +9,7 @@
     <div id="naglowek">
             <h1>Jan Kochanowski</h1>
             <h2>Fraszki</h2>
-            <img src="ksiazka.png" alt="ksiazka"
+            <img src="ksiazka.png" alt="ksiazka">
             <ol id="menuglowne">
                 <li><a href="do-goscia.html">do gościa</a></li>
                 <li><a href="na-swoje-ksiegi.html">na swoje księgi</a></li>
@@ -17,11 +17,11 @@
             </ol>
     </div>
     
-    <div id="tresc">
+    <div>
 
-<h3>Do gościa</h3>
-
-<p>
+<h3 id="secondtitle">Do gościa </h3>
+<br><br><br><br>
+<p  id="tresc">
 Jesli darmo masz te książki,<br />
 A spełna w wacku pieniążki,<br />
 Chwalę twą rzecz, gościu-bracie,<br />
