--- a/układ strony powtóka 26.01.21/układ_strony.html
+++ b/układ strony powtóka 26.01.21/układ_strony.html
@@ -7,6 +7,52 @@
                 color: white;
                 font-family: Arial, Helvetica, sans-serif;
             }
+            main{
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+            }
+            header{
+                width: 100%;
+                height: 120px;
+                background-color: rgb(152, 55, 20);
+                display: flex;
+                justify-content: space-between;
+            }
+
+            img {
+                height: 120px;
+            }
+
+            article{
+                height: 500px;
+                background-color: rgb(255, 127, 80);
+            }
+
+            article:nth-of-type(1){
+                width: 80%;
+            }
+            article:nth-of-type(2){
+                width: 20%;
+            }
+            footer{
+                background-color: rgb(152, 55, 20);
+                display: flex;
+                justify-content: flex-end;
+                width: 100%;
+            }
+            header a{
+                margin-top: 20px;
+                margin-right: 30px;
+            }
+            button{
+                color: black;
+                border: 1px, solid;
+                padding: 8px;
+                padding-left: 15px;
+                padding-right: 15px;
+                margin: 7px;
+            }
         </style>
         <link rel="stylesheet" href=""/>
     </head>
