commit to master

--- a/układ strony powtóka 26.01.21/układ_strony.html
+++ b/układ strony powtóka 26.01.21/układ_strony.html
@@ -70,11 +70,12 @@
                     liczba A: <input type="number" name="" id="liczbaA" /> <br>
                     liczba <B></B>: <input type="number" name="" id="liczbaB" /> <br>
                 </label>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
                 <button>A^B</button>
+                <p id="wynik">Wynik: </p>
              </article>
              <article>
                 <ul>
