commit to master

--- a/js+html/02.02.html
+++ b/js+html/02.02.html
@@ -13,11 +13,11 @@
         <p id="wynik"></p>
 
         <script>
-                let km = document.getElementById("kmm").value;
+            let km = document.getElementById("kmm").value;
 
-                let m = document.getElementById("mm").value;
-            switch(){
-                case:"mosina":
+            let m = document.getElementById("mm").value;
+            switch(mm){
+                case "mosina":
                     document.getElementById("wynik").innerHTML = (km+5);
             }
         </script>
