--- a/10.03.html
+++ b/10.03.html
@@ -1,12 +1,72 @@
-<!DOCTYPE html>
-<html>
-    <head>
-		<meta charset="utf-8" />
+<!DOCTYPE html>
+<html lang="pl">
+	<head>
+		<meta charset="utf-8">
 		<style>
-            
+			.disableMenu{
+				display: none;
+			}
+			.box{
+				width: 50px;
+				height: 50px;
+				border: 1px solid tomato;
+				display: inline-block;
+			}
+			.box-marked{
+				background-color: red;
+			}
 		</style>
-    </head>
-    <body>
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li><a href="#">link 1</a></li>
+				<li><a href="#">link 2</a></li>
+				<li><a href="#">link 3</a></li>
+				<li><a href="#">link 4</a></li>
+			</ul>
+		</nav>
+		<button>Ukryj menu</button>
+		<button>Odkryj menu</button>
+		<script>
+			let guziki = document.querySelectorAll("button");
+			guziki[0].onclick = function(){
+				let menu = document.querySelector("nav ul");
+				menu.classList.add("disableMenu");
+			}
+			guziki[1].onclick =()=>{
+				let menu = document.querySelector("nav ul");
+				menu.classList.remove("disableMenu");
+			}
 
-    </body>
+		</script>
+
+
+		<br><br><br><br>
+
+
+		<div class= "box"></div>
+		<div class= "box"></div>
+		<div class= "box"></div>
+		<div class= "box"></div>
+
+			<script>
+
+				let kwadraty = document.querySelectorAll(".box");
+				for (zmienna of kwadraty){
+					zmienna.onclick = function(e){
+						this.classList.toggle("box-marked");
+					}
+				}
+				for(var i = 0; i< box.lenght;i++){
+					this.classList.toggle("box-marked");
+				}
+				// To to samo
+		</script>
+
+		<br><br><br><br>
+
+		
+
+	</body>
 </html>
