--- a/09.02.21p.html
+++ b/09.02.21p.html
@@ -5,9 +5,10 @@
         <style>
         </style>
     </head>
+    <!--Robiliśmy to 2 lekcje-->
+    <!--Pełny dokończony kod znajduje się w 16.02-->
     <body>
          <main>
-             
          </main>
          <script>
              function dodawanie(){
@@ -19,7 +20,7 @@
                  }
                  
                  else{
-                     document.getElementById("Wynik: ").innerHTML = "wynik" + (liczbaA + liczbaB);
+                     document.getElementById("wynik").innerHTML = "Wynik: " + (liczbaA + liczbaB);
                  }
 
 
@@ -33,9 +34,8 @@
                     alert("A jest mniejsze od B");
                     document.getElementById("a").style.borderColor = "red";
                 }
-
                 else{
-                    document.getElementById("Wynik: ").innerHTML = "wynik" + (liczbaA - liczbaB);
+                    document.getElementById("wynik").innerHTML = "Wynik: " + (liczbaA - liczbaB);
                 }
              }
          </script>
