commit to master

--- a/pusty_html_.html
+++ b/pusty_html_.html
@@ -9,4 +9,9 @@
     <body>
 
     </body>
+<script>
+	alert("Witaj świecie");
+	var imie = prompt("Podaj swoje imię: ");
+	document.write("Witaj "+imie); 
+   </script>
 </html>
