commit to master

--- a/Js/10.03.html
+++ b/Js/10.03.html
@@ -54,13 +54,11 @@
 
 				let kwadraty = document.querySelectorAll(".box");
 				for (zmienna of kwadraty){
-					zmienna.onclick = function(e){
+					zmienna.onclick = function(){
 						this.classList.toggle("box-marked");
 					}
 				}
-				for(var i = 0; i< box.lenght;i++){
-					this.classList.toggle("box-marked");
-				}
+
 				// To to samo
 		</script>
 
