commit to master

--- a/Js/04.13.21.html
+++ b/Js/04.13.21.html
@@ -24,7 +24,7 @@
 
 			//let py = document.createElement("p");
 			//document.body.appendChild(py);
-			// Tworzymy element <p.
+			// Tworzymy element <p>
 
 			//py.textContent = "tekst";
 			// Tak możemy dodać zwykly tekst
