commit to master

--- a/4_klasa/21.09.24/7.html
+++ b/4_klasa/21.09.24/7.html
@@ -41,7 +41,7 @@
             <br>
             <span>
                 <a href="">Zapytania do baz</a>
-                <a href="https:\\filmy.pl">Przejdź do filmy.pl</a>
+                <a href="https:\\filmy.pl" target="_blank">Przejdź do filmy.pl</a>
             </span>
         </footer>
         
