--- a/4_klasa/21.10.08/formaty.html
+++ b/4_klasa/21.10.08/formaty.html
@@ -10,16 +10,19 @@
         {
             document.getElementById("outpuut").style.color = "red";
             sprawdz();
+            rozmiar();
         }
         function blue()
         {
             document.getElementById("outpuut").style.color = "blue";
             sprawdz();
+            rozmiar();
         }
         function green()
         {
             document.getElementById("outpuut").style.color = "green";
             sprawdz();
+            rozmiar();
         }
 
         function sprawdz()
@@ -27,6 +30,11 @@
             let x = document.getElementById("select").value;
             if(x == "prosty") document.getElementById("outpuut").style.fontStyle = "normal";
             else document.getElementById("outpuut").style.fontStyle = "italic";
+        }
+        function rozmiar()
+        {
+            let x = +document.getElementById("procenty").value;
+            document.getElementById("outpuut").style.fontSize= x+"%";
         }
 
     </script>
@@ -38,70 +46,74 @@
     </header>
 
     <section>
-        <h2>Przykład listy -hobby</h2>
+        <div>
+            <h2>Przykład listy -hobby</h2>
+            <ul>
+                <li>muzyka</li>
+                <li>turystyka</li>
+                <ol>
+                    <li>góry</li>
+                    <li>jeziora</li>
+                    <li>na rowerze</li>
+                </ol>
+                <li>książki</li>
+            </ul>
+        </div>
 
-        <ul>
-            <li>muzyka</li>
-            <li>turystyka</li>
-            <ol>
-                <li>góry</li>
-                <li>jeziora</li>
-                <li>na rowerze</li>
-            </ol>
-            <li>książki</li>
-        </ul>
-        Przykład tabeli -rozkład dnia
-        <br>
-        <br>
-        <br>
-        <table>
-            <tr>
-                <th>Pora dnia</th>
-                <th>obowiązki</th>
-            </tr>
-            <tr>
-                <td>rano</td>
-                <td>nauka</td>
-            </tr>
-            <tr>
-                <td>południe</td>
-                <td>zajęcia dodatkowe</td>
-            </tr>
-            <tr>
-                <td>popołudnie</td>
-                <td rowspan="2">moje hobby</td>
-            </tr>
-            <tr>
-                <td>wieczór</td>
-            </tr>
-        </table>
+        <div>
+            <h2>Przykład tabeli -rozkład dnia</h2>
+            <table>
+                <tr>
+                    <th>Pora dnia</th>
+                    <th>obowiązki</th>
+                </tr>
+                <tr>
+                    <td>rano</td>
+                    <td>nauka</td>
+                </tr>
+                <tr>
+                    <td>południe</td>
+                    <td>zajęcia dodatkowe</td>
+                </tr>
+                <tr>
+                    <td>popołudnie</td>
+                    <td rowspan="2">moje hobby</td>
+                </tr>
+                <tr>
+                    <td>wieczór</td>
+                </tr>
+                </table>
+        </div>
 
+        <img src="g6016.png" alt="technologia web">
     </section>
-
     <main>
+        <br><br>
         <form>
             "Podaj rozmiar tekstu w procentach
-            <input type="number" id="procenty">%
+            <input type="number" id="procenty">%<br><br>
 
             <select id="select">
                 <option value="prosty">prosty</option>
                 <option value="kursywa" >kursywa</option>
-            </select>
+            </select><br><br>
 
-            <input type="button" onclick=red()></input>
-            <input type="button" onclick=blue()></input>
-            <input type="button" onclick=green()></input>
-        </form>
+            <input type="button" id="red1" onclick=red()></input>
+            <input type="button" id="blue1" onclick=blue()></input>
+            <input type="button" id="green1" onclick=green()></input>
+        </form><br><br>
 
         <div id="outpuut">
             To jest przykład paragrafu, który może być dowolnie formatowany 
             przez Java Script
-        </div>
+        </div><br><br>
 
     </main>
 
     <footer>
-
+        <span>Formatowaniem tekstu zajmował się: Michal Frackowiak</span>
+        <br><br>
+        <a href="https:formatowanie.pl/" target="_blank">Odwiedź także</a>
     </footer>
 
 </body>
