--- a/projekt/AdminLTE-3.1.0/pages/UI/modals.html
+++ b/projekt/AdminLTE-3.1.0/pages/UI/modals.html
@@ -1451,7 +1451,7 @@
         class: 'bg-warning',
         title: 'Toast Title',
         subtitle: 'Subtitle',
-        body: 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr.'
+        body: 'Lorem ipsum dolor sit amet, consetetur sadipscing elitraaaaa.'
       })
     });
     $('.toastsDefaultDanger').click(function() {
