commit to master

--- a/restouracja/main.html
+++ b/restouracja/main.html
@@ -4,7 +4,55 @@
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
-    <body>  
+    <body>
+        <span id="menu"></span>
+        <header>
+            <img src="Pho Tai.svg" alt="Pho Tai">
+            <div class="flex">
+                <nav>
+                    <div id="menu">
+                        <div class="btn">
+                            <div id="wrapper">
+                                <div class="text">Jesteśmy na rynku już ponad od 20 lat! Gotujemy wykwinte potrway na miejscu oraz organizujemy dostawy do waszych domów</div>
+                            </div>
+                            <div id="button">O nas</div>
+                        </div>
+                        <a href="#conact">Kontakt</a>
+                        <a href="#galery">Galeria</a>
+                        <a href="#offer">Oferta</a>
+                        <a href="#menu">Menu</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <main>
+
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <span id="conact"></span>
+            <br><br><br><br><br><br><br>
+            <h1>
+                <span class="letter">K</span>
+                <span class="letter">O</span>
+                <span class="letter">N</span>
+                <span class="letter">T</span>
+                <span class="letter">A</span>
+                <span class="letter">K</span>
+                <span class="letter">T</span>
+            </h1>
+            <br><br><br><br><br><br><br>
+            <div id="map"></div>
+            <div class="text">
+                34-100 Wadowice; ul. Kościelna 7 
+            </div>
+            
+
+
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        </main>
         <h1>
             <span class="letter">P</span>
             <span class="letter">H</span>
@@ -13,14 +61,7 @@
             <span class="letter">T</span>
             <span class="letter">A</span>
             <span class="letter">I</span>
-            </h1>
-        <div id="root">
-
-            <div id="wrapper">
-              <div id="text">Jesteśmy na rynku już ponad od 20 lat! Gotujemy wykwinte potrway na miejscu oraz organizujemy dostawy do waszych domów</div>
-            </div>
-            <div id="button">O nas</div>
-        </div>
+        </h1>
 
         <div class="delivery">&#128757;&#128757; Dostarczamy jedzenie w 40 minut &#128757;&#128757;</div>
     </body>
